<resources>
    <string name="app_name">HyFish</string>

    <string name="hyfish_logo">HyFish Logo</string>

    <string name="register_title">Create a New Account</string>
    <string name="register_to_login">Already have an account? Log In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_success">Account registered successfully</string>
    <string name="register_confirm">Password and confirm password do not match</string>

    <string name="login_title">Welcome back!</string>
    <string name="login_to_register">Don’t have an account? Register</string>
    <string name="login">Login</string>

    <string name="cv_password_error">Password cannot be less than 8 characters</string>

    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="main_greetings">Hello, %1$s</string>
    <string name="avatar">avatar</string>
    <string name="main_articles">Articles for you!</string>
    <string name="see_all">See all</string>
    <string name="main_scans">Recent scans</string>

    <string name="item_title">Title</string>
    <string name="item_description">Description</string>
    <string name="item_date">Date</string>

    <string name="title_home">Home</string>
    <string name="title_forum">Forum</string>
    <string name="title_history">History</string>
    <string name="title_fishes">Fishes</string>

    <string name="create_post">Create Post</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis bibendum magna quis venenatis. Donec et sem tincidunt, sodales lectus faucibus, semper velit …</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="item_likes">%1$d Likes</string>
    <string name="item_comments">%1$d Comments</string>

    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="title_add_post">Create a Post </string>
    <string name="title_post_detail">View Post</string>
    <string name="title_article_detail">View Article</string>

    <string name="create_scan">Create a Scan</string>
    <string name="title_scan_result">Scan Result</string>
    <string name="field_required">This field is required</string>
    <string name="logout">Logout</string>
    <string name="no_error">No image selected</string>
    <string name="cant_classify_image">Failed to classify image</string>
    <string name="no_image_found">No image found</string>
    <string name="gallery">Gallery</string>
    <string name="scan">Scan</string>
    <string name="camera">Camera</string>

    <string name="title_scan">New Scan</string>
    <string name="no_permission">Hyfish needs camera permission to scan image</string>

    <string name="freshness">Scan Freshness</string>
    <string name="classification">Scan Classification</string>
    <string name="fish_classification">Fish Classification</string>
    <string name="fish_freshness">Fish Freshness</string>
    <string name="fresh">Fresh</string>
    <string name="not_fresh">Not Fresh</string>
    <string name="scan_detail">Scan Detail</string>
    <string name="score">Score: %1$s</string>
    <string name="created_at">Created at: %1$s</string>
    <string name="fish_name">Fish Name</string>
    <string name="fish_nutrition">Nutritional Value Information</string>
    <string name="fish_description">Description of Fish</string>
    <string name="title_fish_detail">Fish Detail</string>
    <string name="empty_list">Empty List</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="post">Post</string>
    <string name="select_image">Select Image</string>
    <string name="searchbar_hint">Search forum</string>
    <string name="fish_recipes">Recipes</string>
</resources>