<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hyfish.app.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_forum"
        android:name="com.hyfish.app.view.forum.ForumFragment"
        android:label="@string/title_forum"
        tools:layout="@layout/fragment_forum" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.hyfish.app.view.history.HistoryFragment"
        android:label="@string/title_history" />
    <fragment
        android:id="@+id/navigation_fishes"
        android:name="com.hyfish.app.view.fishes.FishesFragment"
        android:label="@string/title_fishes" />
</navigation>